--- a/tours/templates/tours/departure.html
+++ b/tours/templates/tours/departure.html
@@ -1,7 +1,7 @@
 {% extends 'tours/base.html' %}
 
 {% block content %}
-    <h1 class="display-5 mt-4">Летим из <span data-test="from">Новосибирска</span></h1>
+    <h1 class="display-5 mt-4">Летим из <span data-test="from">{% if departure == "msk" %}Москвы{% elif departure == "nsk" %}Новосибирска{% elif departure == "kazan" %}Казани{% elif departure == "spb" %}Санкт-Петербурга{% elif departure == "ekb" %}Екатеринбурга{% endif %}</span></h1>
     <p class="mb-4">Найдено <span data-test="tourcount">15</span> туров, от <span data-test="pricemin">26000</span> до <span data-test="pricemax">84600</span> и от <span data-test="nightsmax">4</span> ночей до <span data-test="nightsmax">15</span> ночей</p>
     <!-- HERO -->
 
@@ -10,78 +10,19 @@
     <!-- CARDS -->
 
       <div class="row mt-5" data-test="cards">
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
+          {% for tour in tours %}
+            <div class="col-4" data-test="card">
+                <div class="card mb-3">
+                <img src="{{ tour.picture }}" class="card-img-top img-fluid" data-test="picture">
+                <div class="card-body">
+                  <h5 class="card-title">{{ tour.title }}</h5>
+                 <p class="card-text">{{ tour.description }}.</p>
+                    <a href="/tour/{{ tour.id }}" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
+                </div>
             </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
             </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-             <h5 class="card-title">Hotel title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-    </div>
-
+          {% endfor %}
 </div>
-
-
-
 
 </body></html>
 
