--- a/tours/templates/tours/index.html
+++ b/tours/templates/tours/index.html
@@ -1,96 +1,32 @@
 {% extends 'tours/base.html' %}
 
 {% block content %}
-   <div class="jumbotron text-center mt-4">
-      <h1 class="display-4">Всякие туры</h1>
-      <p class="lead">{{ subtitle }}</p>
-      <p class="mt-5 w-50 mx-auto">{{ description }}</p>
-    </div>
 
-    <!-- CARDS -->
+    <main class="container mt-3">
+        <!-- HERO -->
+        <section class="jumbotron text-center mt-4" style="background-image: url('https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80'); background-size: cover;height: 100%;">
+            <h1 class="display-4">{{ title }}</h1>
+            <p class="lead">{{ subtitle }}</p>
+            <p class="mt-5 w-50 mx-auto">{{ description }}</p>
+        </section>
+        <!-- CARDS -->
+        <div class="row mt-5">
+            {% for tour in random_tours %}
+                <div class="col-4">
+                    <div class="card mb-4">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <img class="card-img-top embed-responsive-item" src="{{ tour.picture }}" alt=""/>
+                        </div>
+                        <div class="card-body">
+                            <h2 class="h5 card-title">{{ tour.title }}</h2>
+                            <p class="card-text"
+                               style="height: 3vw; width: 100%; text-overflow: ellipsis;  white-space: nowrap;  overflow: hidden;">{{ tour.description }}</p>
+                            <a href="tour/{{ tour.id }}" class="btn btn-sm btn-primary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </main>
 
-    {% for i in tours %}
-        <div class="row mt-5" data-test="cards">
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-        </div>
-    {% endfor %}
-
-    <div class="row mt-5" data-test="cards">
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-             <h5 class="card-title">Hotel title</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-             <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-
-        <div class="col-4" data-test="card">
-            <div class="card mb-3">
-            <img src="https://place-hold.it/300x200" class="card-img-top img-fluid" data-test="picture">
-            <div class="card-body">
-              <h5 class="card-title">Hotel title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="" class="btn btn-sm btn-primary" data-test="tourlink">Подробнее</a>
-            </div>
-        </div>
-        </div>
-    </div>
 {% endblock %}
